# havoc-machine

./: README.md
cli/: .gitignore  README.md  pyproject.toml  run.sh
cli/havoc_cli/: __init__.py  api_client.py  main.py  ui.py
client/: package.json  pnpm-lock.yaml
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/app/dashboard/: page.tsx
client/src/app/dashboard/reports/[groupId]/: page.tsx
client/src/app/dashboard/run/: page.tsx
client/src/app/login/: page.tsx
client/src/app/signup/: page.tsx
client/src/components/ui/: button.tsx  dropdown-menu.tsx
client/src/utils/: api.ts
server/: .drive_state.pkl  .gitignore  adversarial_agent.py  agent_server.py  drive_watcher.py  main.py  parallel_adversarial.py  pyproject.toml  report_generator.py  run_adversarial.py  sync_kb.py
server/utils/: __init__.py  drive_watcher.py  embeddings.py
