[project]
name = "havoc-cli"
version = "0.1.0"
description = "CLI tool for running parallel adversarial red teaming sessions"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.7.0",
    "requests>=2.31.0",
    "typing-extensions>=4.8.0",
]

[project.scripts]
havoc-cli = "havoc_cli.main:main"
havoc = "havoc_cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

